final updates done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>Header</header>
-    <nav>Nav</nav>
-    <section>Section</section>
-    <Article>Article</Article>
+<body class="container">
+    <div class="clearfix">
+        <header>Header</header>
+    </div>
+    <div class="clearfix">
+        <nav>Nav</nav>
+    </div>
+    <div class="clearfix">
+        <aside>
+            <h2>Aside heading</h2>
+        </aside>
+    </div>
+    <div class="clearfix">
+        <section>
+            <article>
+                <h1>This is also heading one</h1>
+                <h1>This is heading - one</h1>
+                <h2>This is heading - two</h2>
+                <h3>This is heading - three</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nemo nobis totam doloribus, molestiae praesentium. Error vel dignissimos hic at!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa unde quas fugiat tempore, esse nostrum eos earum assumenda commodi placeat!</p>
+            </article>
+        </section>
+    </div>
+    <div>
+        <footer>Footer</footer>
+    </div>
     
 </body>
 </html>
